# COV-19-Desktop_App

./: CMakeLists.txt  CMakeLists.txt.user.1930579  CMakeLists.txt.user.2f6331f  Covid19RegistrationSystem3.pro  Images.qrc  adminlogs.cpp  adminlogs.h  adminlogs.ui  adminmain.cpp  adminmain.h  adminmain.ui  adminreports.cpp  adminreports.h  adminreports.ui  adminuserdetail3.cpp  adminuserdetail3.ui  adminusers.cpp  adminusers.ui  database.cpp  database.db  database.h  database2.db  landingpage.cpp  landingpage.h  landingpage.ui  login.cpp  login.ui  main.cpp  signup.cpp  signup.h  signup.ui  temp1.cpp  temp1.h  temp2.cpp  temp2.h  usercovid19testresult.cpp  usercovid19testresult.ui  userpage.cpp  userpage.h  userpage.ui  (+9 more)
